fixed contrast issues

--- a/styles/base.css
+++ b/styles/base.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 :root {
-    --primary-color: #2C736C;
+    --primary-color: #123935;
     --background-color: #efeff0;
     --nav-color: #73503C;
     --heading-font: 'Pridi', serif;
